# sporos-researcher-fullstack

backend/: pyproject.toml  test_openai.py
backend/src/agent/: __init__.py  configuration.py  graph.py  nodes.py  prompts.py  retrieval.py  state.py  tools_and_schemas.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/components/: ActivityTimeline.tsx  ChatMessagesView.tsx  InputForm.tsx  WelcomeScreen.tsx
